- Zeilenumbrüche beim Beschreibungstext eines Downloads werden angezeigt.
- Der Download von Dateien, welche Leerzeichen im Dateinamen enthalten,
  funktioniert.
- Nach der Authentifizierung erfolgt die Weiterleitung auf einen geschützten
  Download korrekt.

Modul: Dokumenten System
- Kompatibel mit der Alias Verwaltung.

Modul: Forum
- Die Statistik wird von Suchmaschinen nicht beeinflusst.

Modul: Bildergallerie
- Keine weisse Seite mehr, wenn man versucht ein Bild zu rotieren und die
  ImageRotate() Funktion nicht verfügbar ist.

Modul: Gästebuch
- Der Inhalt des Benachrichtigung-E-Mails wird korrekt dargestellt.

Modul: Kalender
- Die Kategorienauswahl wird bei der Suche berücksichtigt.
- Vergangene Termine/Veranstaltungen können angezeigt werden.

Modul: Kleinanzeigemarkt
- Die Suche nach Anzeigen im Backend funktioniert.

Modul: Newsletter
- Die Anmeldung und Bearbeitung des Profils funktioniert korrekt.
- Die versandten Newsletter sind kompatibel mit der Verwenden von Virtuellen
  Sprachverzeichnissen.
- Die Anzahl totaler Empfänger eines Newsletter wird nun zwischengespeichert,
  damit die Auflistung der Newsletter Übersicht schneller erfolgt.

Modul: Linkverzeichnis
- Die Statistik wird von Suchmaschinen nicht beeinflusst.
- Es werden keine leeren Einträge aufgelistet.

Modul: Seitenempfehlung
- Die Vorschaufunktion funktioniert.

Modul: Shop
- E-Mail Vorlagen vom Typ Systemvorlage sind nicht Löschbar.
- Bei der Bestellung eines Produktes vom Typ "Mitgliedschaft" wird das
  Benutzerkonto mit der entsprechend definierten Gültigkeitsdauer erstellt.
- Beim Versand der Bestellbestätigung per E-Mail wird, falls die benötigte
  E-Mail Vorlage in der ausgewählten Sprache nicht vorhanden ist, die, in der
  Standardsprache erfassten E-Mail Vorlage verwendet. Falls auch letztere nicht
  vorhanden ist, wird die nächste vorhandene Sprache verwendet.
- Bei einer Bestellung wird das Land der Lieferadresse gespeichert.