@@ -12,8 +12,8 @@
 // <![CDATA[
 function closeWindow()
 {
-  window.opener.focus();
-  window.top.close();
+	window.opener.focus();
+	window.top.close();
 }
 
 /**
@@ -61,7 +61,7 @@ function uploaderStatusChanged(uploader)
              * Reload opener window with passing the list of uploaded files in JSON
              * packed into the url modifier "highlightFiles".
              */
-            sFiles = '&highlightFiles=';
+            sFiles = '&{CSRF_PARAM}&highlightFiles=';
             sFiles += encodeURIComponent('["' + aUploadedFiles.join('", "') + '"]');
             window.opener.location.replace(window.opener.location.href+sFiles);
 
@@ -108,13 +108,13 @@ function appletInitialized(applet)
 
         <param name="uc_uploadUrl" value="{FILEUPLOADER_HANDLER_PATH}" />
         <param name="uc_partitionLength" value="{FILEUPLOADER_PARTITION_LENGTH}" />
-    <param name="gc_loggingLevel" value="FATAL" />
+		<param name="gc_loggingLevel" value="FATAL" />
         <param name="ac_fireAppletInitialized" value="true"/>
         <param name="ac_fireUploaderFileStatusChanged" value="true"/>
         <param name="ac_fireUploaderStatusChanged" value="true"/>
-    <param name="vc_uploadListViewName" value="_compact"/>
-    <param name="vc_useThumbs" value="false"/>
-    <param name="vc_lookAndFeel" value="system"/>
+		<param name="vc_uploadListViewName" value="_compact"/>
+		<param name="vc_useThumbs" value="false"/>
+		<param name="vc_lookAndFeel" value="system"/>
     </applet>
     <div style="text-align:right; margin:10px;">
         <input type="button" id="fileUploaderClose" onclick="window.close();" value="{TXT_FILEUPLOADER_CLOSE}" />
